--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,13 @@
   "description": "",
   "dependencies": {
     "@langchain/community": "^0.2.2",
+    "@pinecone-database/pinecone": "^2.2.1",
+    "@xenova/transformers": "^2.17.1",
+    "dotenv": "^16.4.5",
     "mammoth": "^1.7.2",
-    "pdf-parse": "^1.1.1"
+    "mongodb": "^6.6.2",
+    "openai": "^4.47.1",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.1"
   }
 }
