--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,11 +15,15 @@
     "@langchain/community": "^0.2.2",
     "@pinecone-database/pinecone": "^2.2.1",
     "@xenova/transformers": "^2.17.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mammoth": "^1.7.2",
     "mongodb": "^6.6.2",
     "openai": "^4.47.1",
-    "pdf-parse": "^1.1.1",
-    "uuid": "^9.0.1"
+    "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
